trying to deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://containers-us-west-64.railway.app:5898/railway
+spring.datasource.url=jdbc:postgresql://containers-us-west-64.railway.app:5898/railway?sslmode=require
 spring.datasource.username=postgres
 spring.datasource.password=OPEqo18jsmvQE3GhbbkY
 spring.datasource.driver-class-name=org.postgresql.Driver
